# kerneldev-mcp

./: .gitignore  BOOT_TESTING.md  BOOT_WITH_FSTESTS.md  BOOT_WITH_FSTESTS_AUTO_SETUP.md  BUILD_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CROSS_COMPILE_QUICKSTART.md  FSTESTS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SCRATCH_DEV_POOL_FIX.md  SPARSE_FILES.md  TESTING-SUMMARY.md  TESTING.md  pyproject.toml  setup-hooks.sh  test_arm64_cross_compile.py  test_basic.py  test_build.py  test_custom_command.sh  test_integration.py  test_kernel_boot.py  test_overlayfs.sh  test_real_kernel_build.py
docs/: CUSTOM_ROOTFS.md  DEVICE-POOL-ARCHITECTURE.md  device-pool-setup-guide.md
docs/implementation/: BUILD_FEATURES.md  CROSS_COMPILE_IMPLEMENTATION.md  CUSTOM_ROOTFS_IMPLEMENTATION.md  FSTESTS.md  FSTESTS_BUILD_FIXES.md  amd-vi-interrupt-remapping-bug.md  custom-device-attachment.md  device-pool-design.md  device-pool-permissions-fix.md  null-blk-implementation.md  overlayfs-empty-read-fix.md
examples/: custom_rootfs_usage.md  example_usage.md
hooks/: pre-commit
src/kerneldev_mcp/: __init__.py  baseline_manager.py  boot_manager.py  build_manager.py  config_manager.py  device_manager.py  device_pool.py  device_pool_tools.py  device_utils.py  fstests_manager.py  git_manager.py  rootfs_manager.py  server.py  (+1 more)
tests/: __init__.py  test_baseline_manager.py  test_baseline_save.py  test_boot_custom_command.py  test_boot_fstests.py  test_boot_manager.py  test_boot_manager_device_pool_integration.py  test_build_manager.py  test_config_manager.py  test_custom_mkfs_command.py  test_device_manager.py  test_device_pool_config.py  test_device_pool_managers.py  test_device_pool_permissions.py  test_device_pool_safety.py  test_device_utils.py  test_device_utils_null_blk.py  test_extra_args.py  test_fstests_manager.py  test_fstests_validation.py  test_git_manager.py  test_kill_hanging_vms.py  test_mcp_tools.py  test_templates.py  test_vng_qemu_opts.py  test_volume_allocation.py  test_volume_state_manager.py
(+26 files in other folders)
